Complete dashboard design consistency and CPI inspection form implementation
- Fixed dashboard backgrounds to white across all views
- Increased sidebar width to 280px with text wrapping
- Redesigned client sidebar with dropdown menu structure
- Added role-based KPI cards to user management page
- Enhanced navbar with direct logout button and profile dropdown
- Added login page link to landing page
- Updated landing page navbar with dashboard blue gradient
- Replaced all orange/yellow colors with dashboard blue (#5b67ca)
- Fixed HTML validation errors
- Added CPI scoring migration with property snapshots and immutability
- Created comprehensive CPI inspection form with database-driven domains
- Added inspection data immutability documentation
- Implemented CPI factor management (CRUD) for domains
- Created routes for CPI domain factors management

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -59,30 +59,15 @@
   </head>
   <body>
 
-    <!-- ========== SECTION: TOP HEADER - LOGO & SOCIAL MEDIA ========== -->
-    <div class="container pt-5">
-			<div class="row justify-content-between">
-				<div class="col">
-					<a class="navbar-brand" href="index.html" style="font-size: 1.5rem; font-weight: 700;">
-						<span style="color: #000;">EMURIA</span><span style="color: #FFB800;">PropertyCare</span>
-					</a>
-				</div>
-				<div class="col d-flex justify-content-end">
-					<div class="social-media">
-		    		<p class="mb-0 d-flex">
-		    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
-		    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
-		    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
-		    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-linkedin"><i class="sr-only">LinkedIn</i></span></a>
-		    		</p>
-	        </div>
-				</div>
-			</div>
-		</div>
-		<!-- ========== END: TOP HEADER ========== -->
+    
 
 		<!-- ========== SECTION: NAVIGATION MENU ========== -->
-		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light" id="ftco-navbar" style="background: linear-gradient(180deg, #5b67ca 0%, #4854b8 100%) !important;">
+      <div class="col">
+					<a class="navbar-brand" href="index.html" style="font-size: 1.5rem; font-weight: 700;">
+						<span style="color: #ffffff;">EMURIA</span><span style="color: #FFB800;">PropertyCare</span>
+					</a>
+				</div>
 	    <div class="container">
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="fa fa-bars"></span> Menu
@@ -95,6 +80,14 @@
 	        	<li class="nav-item"><a href="#how-it-works" class="nav-link">How It Works</a></li>
 	          <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
 	        </ul>
+          <div class="social-media">
+		    		<p class="mb-0 d-flex">
+		    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
+		    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
+		    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
+		    			<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-linkedin"><i class="sr-only">LinkedIn</i></span></a>
+		    		</p>
+	        </div>
 	        <ul class="navbar-nav ml-auto">
 	        	<li class="nav-item"><a href="/register" class="nav-link btn btn-success text-white px-3 mr-2">Get Started FREE</a></li>
 	        	<li class="nav-item"><a href="/login" class="nav-link btn btn-primary text-white px-3">Login</a></li>
@@ -327,7 +320,7 @@
           <div class="col-md-6 col-lg-3 mb-4 ftco-animate">
             <div class="bg-white p-4 text-center shadow-sm rounded" style="height: 100%;">
               <div class="mb-3">
-                <span class="flaticon-skyline" style="font-size: 60px; color: #ffc107;"></span>
+                <span class="flaticon-skyline" style="font-size: 60px; color: #5b67ca;"></span>
               </div>
               <h4 class="mb-3">3. Custom Plan Created</h4>
               <p class="text-muted">Our AI-powered system analyzes 7 key factors and generates a personalized care plan just for you.</p>
